--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -75,7 +75,7 @@ h1, h2, h3, h4, h5 {
 /* header */
 
 header nav {
-  display: inline-block;
+  display: flex;
   width: 691px;
   vertical-align: top;
   margin-top: 35px;
